--- a/app/views/commands/show.html.erb
+++ b/app/views/commands/show.html.erb
@@ -30,5 +30,7 @@
   <%= @command.total %>
 </p>
 
+<%= link_to 'Participer', new_command_answer_path(@command) %>
+
 <%= link_to 'Edit', edit_command_path(@command) %> |
 <%= link_to 'Back', commands_path %>
