Correct small mistakes

--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @answer %> |
+<%= link_to 'Show', [@command, @answer] %> |
 <%= link_to 'Back', command_answers_path(@command) %>
