--- a/app/views/commands/show.html.erb
+++ b/app/views/commands/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Owner:</strong>
+  <%= @command.owner %>
+</p>
+
+<p>
   <strong>Date:</strong>
   <%= @command.date %>
 </p>
