Added total for commands

--- a/app/views/commands/index.html.erb
+++ b/app/views/commands/index.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Commandes du jour', commands_path %>
+<%= link_to 'Toutes les commandes', allcommands_path %>
+
 <h1>Listing Commands</h1>
 
 <table>
